Updates from Overleaf

--- a/Manuscript/Manuscript.tex
+++ b/Manuscript/Manuscript.tex
@@ -105,7 +105,7 @@ Nicholas L. Swanson-Hysell\textsuperscript{1}
 
 \noindent
 % MAXIMUM 125 CHARACTERS 
-\textbf{One Sentence Summary:} Arc-continent collision in the Southeast Asian islands increased global weatherability enough to drive Neogene cooling.
+\textbf{One Sentence Summary:} The growth of tropical maritime islands led to efficient carbon consumption and drove cooling over the past 15 million years.
 
 % MAXIMUM 125 WORDS
 % NO CITATIONS OR ABBREVIATIONS
@@ -113,7 +113,7 @@ Nicholas L. Swanson-Hysell\textsuperscript{1}
 The Southeast Asian islands bring together steep topography, a tropical climate, and mafic lithologies to efficiently weather rocks in the region and consume large amounts of \COtwo. Concurrent with global cooling since the mid-Miocene, ongoing arc-continent collision has led to a significant increase of subaerially-exposed land area in the region. Here we use geologic data to reconstruct the shorelines of the Southeast Asian islands over the past 15 million years and quantify the increase in land area. We use these paleoshorelines as boundary conditions within a coupled weathering-climate model to quantify the change in steady-state \pCOtwo associated with this emergence. We find that the modeled decrease in \pCOtwo due to these paleogeographic changes is sufficient to explain long-term climatic cooling over the Neogene.
 \end{abstract}
 
-The Southeast Asian islands (SEAI) have an out-sized contribution to modern chemical weathering fluxes. The confluence of steep topography, a warm and wet tropical climate, and the presence of mafic lithologies results in high fluxes of Ca and Mg cations and associated \COtwo consumption \cite{Gaillardet1999a}. There has been a significant increase of subaerially-exposed land area within the region since the Miocene associated with ongoing arc-continent collision between Australia and the Sunda-Banda arc system \cite{Molnar2015a, Macdonald2019a}. Concurrently, after the Miocene Climatic Optimum, a cooling trend began ca. 15~Ma and accelerated over the past 4 million years (m.y.) culminating with the onset of Northern Hemisphere glaciation \cite{Zachos2001a}. Many hypotheses have been proposed to explain this cooling trend including changes in ocean/atmosphere circulation \cite{Haug1998a, Shevenell2004a, Molnar2015a}, a decrease in volcanic outgassing \cite{Berner1983a}, or uplift in the Himalaya \cite{Raymo1992a}. Here we instead propose that SEAI emergence was itself sufficient to explain long-term climatic cooling over the Neogene.
+The Southeast Asian islands (SEAI) have an out-sized contribution to modern chemical weathering fluxes. The confluence of steep topography, a warm and wet tropical climate, and the presence of mafic lithologies results in high fluxes of Ca and Mg cations and associated \COtwo consumption \cite{Gaillardet1999a}. There has been a significant increase of subaerially-exposed land area within the region since the Miocene associated with ongoing arc-continent collision between Australia and the Sunda-Banda arc system \cite{Molnar2015a, Macdonald2019a}. Concurrently, after the Miocene Climatic Optimum, a cooling trend began ca. 15~Ma and accelerated over the past 4 million years (m.y.) culminating with the onset of Northern Hemisphere glaciation \cite{Zachos2008a}. Many hypotheses have been proposed to explain this cooling trend including changes in ocean/atmosphere circulation \cite{Haug1998a, Shevenell2004a, Molnar2015a}, a decrease in volcanic outgassing \cite{Berner1983a}, or uplift in the Himalaya \cite{Raymo1992a}. Here we instead propose that SEAI emergence was itself sufficient to explain long-term climatic cooling over the Neogene.
 
 Over geologic time-scales, \COtwo enters Earth's ocean--atmosphere system primarily via volcanism and metamorphic degassing, and leaves primarily through the chemical weathering of silicate rocks, with a smaller sink through organic carbon burial \cite{Kump1997a}. Chemical weathering delivers alkalinity and cations to the ocean which drives carbon sequestration through carbonate precipitation. Steady-state \pCOtwo is set at the \pCOtwo level at which \COtwo sinks are equal to sources. As \COtwo sinks are removed and \pCOtwo rises, temperature increases and the hydrological cycle is invigorated, causing other weathering sinks to increase until a new steady-state is achieved at higher \pCOtwo \cite{Kump1997a}. Conversely, as regions with high carbon sequestration potential emerge on Earth's surface, \pCOtwo decreases resulting in other weathering sinks to diminish leading to a new lower steady-state \pCOtwo concentration.
 
@@ -137,7 +137,9 @@ The results of our SEAI scenarios highlight the importance of the combination of
 
 Other hypotheses to explain ice sheet growth over the Neogene invoke changes in ocean/atmosphere circulation including: further climatic isolation of Antarctica due to strengthening of the circumpolar current \cite{Shevenell2004a}; increased atmospheric moisture in the Northern Hemisphere due to intensified thermohaline circulation following Panama Isthmus emergence \cite{Haug1998a}; and cooling of North America resulting from a strengthened Walker Circulation associated with SEAI emergence \cite{Molnar2015a}. Such changes in ocean/atmosphere circulation are likely to modulate \pCOtwo thresholds for glacial initiation and ice sheet growth \cite{DeConto2008a}. However, the prolonged timescale of the cooling trend since 15~Ma (Fig. \ref{fig:shoreline_growth}C) is most readily attributable to decreasing \pCOtwo associated with evolving geological sources and sinks of carbon, modulated by the silicate weathering feedback \cite{Kump1997a}.
 
-Himalayan uplift \cite{Raymo1992a} or a decrease in volcanic outgassing \cite{Berner1983a} have also been proposed as drivers for Neogene cooling. Rising marine \SrSr has been associated with increasing weathering of the high \SrSr Himalayan lithologies \cite{Raymo1992a}. This increase in \SrSr since ca. 35~Ma is followed by a decrease in slope ca. 15~Ma that has been attributed to exhumation of relatively low \SrSr and high \OsOs Lesser Himalaya lithologies \cite{Colleps2018a}, but could also be partially driven by the exhumation of mafic and organic-rich forearc sediments in SEAI during arc-continent collision.
+Himalayan uplift \cite{Raymo1992a} or a decrease in volcanic outgassing \cite{Berner1983a} have also been proposed as drivers for Neogene cooling. Rising marine \SrSr has been associated with increasing weathering of the high \SrSr Himalayan lithologies \cite{Raymo1992a}. This increase in \SrSr since ca. 35~Ma is followed by a decrease in slope ca. 15~Ma that has been attributed to exhumation of relatively low \SrSr and high \OsOs Lesser Himalaya lithologies \cite{Colleps2018a}, but could also be partially driven by the exhumation of mafic and organic-rich forearc sediments in SEAI during arc-continent collision. 
+
+It continues to be argued that hypotheses that invoke enhanced weathering in regions of active uplift predict an increase in global alkalinity fluxes \cite{Si2019a}. However, total alkalinity delivery through silicate weathering needs to be nearly constant when considering the requirement of steady-state for the long-term carbon cycle. Rather, when weathering is enhanced in a region such as the emerging SEAI, the decrease in \pCOtwo results in a decrease in chemical weathering in other regions where there has not been tectonically-forced change. The same alkalinity delivery occurs more efficiently and thereby at lower \pCOtwo. Given that the weathering of carbonate is disconnected from long-term carbon-cycle mass balance, alkalinity delivery through carbonate weathering could change in an evolving climate and be observable in proxy records \cite{Si2019a}.
 
 Changes in volcanic outgassing and paleogeography elsewhere on Earth, particularly in the Himalaya and Central America, would have effected geological carbon sources and sinks. Yet, not only does the history of SEAI emergence coincide with Neogene cooling and the onset of Northern Hemisphere glaciation, but our coupled weathering-climate model also indicates that the associated \pCOtwo change is sufficient to explain the magnitude of cooling. These results highlight that the Earth's climate state is particularly sensitive to changes in tropical paleogeography.
 
