Updates from Overleaf

--- a/Manuscript/Manuscript.tex
+++ b/Manuscript/Manuscript.tex
@@ -139,7 +139,7 @@ Other hypotheses to explain ice sheet growth over the Neogene invoke changes in 
 
 Himalayan uplift \cite{Raymo1992a} or a decrease in volcanic outgassing \cite{Berner1983a} have also been proposed as drivers for Neogene cooling. Rising marine \SrSr has been associated with increasing weathering of the high \SrSr Himalayan lithologies \cite{Raymo1992a}. This increase in \SrSr since ca. 35~Ma is followed by a decrease in slope ca. 15~Ma that has been attributed to exhumation of relatively low \SrSr and high \OsOs Lesser Himalaya lithologies \cite{Colleps2018a}, but could also be partially driven by the exhumation of mafic and organic-rich forearc sediments in SEAI during arc-continent collision. 
 
-It continues to be argued that hypotheses that invoke enhanced weathering in regions of active uplift predict an increase in global alkalinity fluxes \cite{Si2019a}. However, total alkalinity delivery through silicate weathering needs to be nearly constant when considering the requirement of steady-state for the long-term carbon cycle. Rather, when weathering is enhanced in a region such as the emerging SEAI, the decrease in \pCOtwo results in a decrease in chemical weathering in other regions where there has not been tectonically-forced change. The same alkalinity delivery occurs more efficiently and thereby at lower \pCOtwo. Given that the weathering of carbonate is disconnected from long-term carbon-cycle mass balance, alkalinity delivery through carbonate weathering could change in an evolving climate and be observable in proxy records \cite{Si2019a}.
+It is sometimes argued that hypotheses that invoke enhanced weathering in regions of active uplift predict an increase in global alkalinity fluxes. However, global alkalinity delivery from silicate weathering needs to be nearly constant to keep the long-term carbon cycle in steady-state. Enhanced weathering in a region such as the SEAI is compensated by a decrease in weathering in other regions where there has not been tectonically-forced change. Global alkalinity delivery from silicate weathering does not change, but occurs more efficiently and thereby at lower \pCOtwo. However, given that carbonate weathering is disconnected from long-term carbon-cycle mass balance, alkalinity delivery from carbonate weathering could change in an evolving climate and be observable in proxy records \cite{Si2019a}.
 
 Changes in volcanic outgassing and paleogeography elsewhere on Earth, particularly in the Himalaya and Central America, would have effected geological carbon sources and sinks. Yet, not only does the history of SEAI emergence coincide with Neogene cooling and the onset of Northern Hemisphere glaciation, but our coupled weathering-climate model also indicates that the associated \pCOtwo change is sufficient to explain the magnitude of cooling. These results highlight that the Earth's climate state is particularly sensitive to changes in tropical paleogeography.
 
