--- a/Manuscript/Manuscript.tex
+++ b/Manuscript/Manuscript.tex
@@ -1,65 +1,33 @@
-% more detailed formatting: https://www.sciencemag.org/authors/instructions-preparing-initial-manuscript
-% formatting: https://www.sciencemag.org/authors/science-information-authors
-% submit at: https://cts.sciencemag.org/
+% PNAS website: https://www.pnas.org/page/authors/submission
 
-% Reports (up to ~2500 words including references, notes and captions–corresponds to ~3 printed pages in the journal) present important new research results of broad significance. Reports should include an abstract, an introductory paragraph, up to four figures or tables, and about 30 references. Materials and Methods should be included in supplementary materials, which should also include information needed to support the paper's conclusions.
+% Only a single PDF file containing all text, figures, tables, and supporting information (SI) is required for initial submissions; high-resolution files are not required.
 
-% Titles should be no more than 96 characters (including spaces).
+% The preferred length of articles is 6 pages, but PNAS will allow articles up to a maximum of 12 pages.
 
-% Short titles should be no more than 40 characters (including spaces).
+% Proof pages - Word count - Maximum no. of figures and tables - Maximum no. of references
+% 6   4,000   4   50
+% 7   4,500   5   55
+% 8   5,000   6   60
+% 9   5,500   7   70
+% 10  6,000   8   75
+% 11  6,500   9   80
+% 12  7,000   10  85
 
-% One-sentence summaries capturing the most important point should be submitted for Research Articles, Reports and Reviews. These should be a maximum of 125 characters and should complement rather than repeat the title
+% Include department, institution, and complete address, with the ZIP/postal code, for each author. Use lower case letters to match authors with institutions, as shown in the example. Authors with an ORCID ID may supply this information at submission.
 
-% Abstracts of Research Articles and Reports should explain to the general reader why the research was done, what was found and why the results are important. They should start with some brief BACKGROUND information: a sentence giving a broad introduction to the field comprehensible to the general reader, and then a sentence of more detailed background specific to your study. This should be followed by an explanation of the OBJECTIVES/METHODS and then the RESULTS. The final sentence should outline the main CONCLUSIONS of the study, in terms that will be comprehensible to all our readers. The Abstract is distinct from the main body of the text, and thus should not be the only source of background information critical to understanding the manuscript. Please do not include citations or abbreviations in the Abstract. The abstract should be 125 words or less.
+% All authors must submit their articles at http://www.pnascentral.org/cgi-bin/main.plex. If you are using Overleaf to write your article, you can use the ``Submit to PNAS'' option in the top bar of the editor window.
 
-% Main Text is not divided into sub-headings for Reports. Subheadings are used only in Research Articles, and Reviews.
+% Images must be provided at final size, preferably 1 column width (8.7cm). Figures wider than 1 column should be sized to 11.4cm or 17.8cm wide. Numbers, letters, and symbols should be no smaller than 6 points (2mm) and no larger than 12 points (6mm) after reduction and must be consistent. 
 
-% References and Notes are numbered in the order in which they are cited, first through the text, then through the figure and table legends and finally through Supplementary Materials.
+% Authors should submit SI as a single separate SI Appendix PDF file, combining all text, figures, tables, movie legends, and SI references. PNAS will publish SI uncomposed, as the authors have provided it. Additional details can be found here: https://www.pnas.org/page/authors/format#Supporting_Information. Refer to the SI Appendix in the manuscript at an appropriate point in the text. Number supporting figures and tables starting with S1, S2, etc.
 
-\documentclass[11pt,letterpaper]{article}
+% Use the lineno option to display guide line numbers if required.
+\documentclass[9pt,twocolumn,twoside,lineno]{pnas-new}
 
-%\usepackage{fontspec}
-%\usepackage[utf8]{inputenc}
-\usepackage{textcomp,marvosym}
-\usepackage{amsmath,amssymb}
-\usepackage[normalem]{ulem}
-\usepackage[left]{lineno}
-\usepackage{booktabs}
-\usepackage{changepage}
-\usepackage{rotating}
-\usepackage{color}
-\usepackage{natbib}
-\usepackage{setspace}
-\usepackage{array}
-\usepackage{fancyhdr}
-\usepackage{graphicx}
+% other packages
 \usepackage{xspace}
-\usepackage[hidelinks]{hyperref}
-\urlstyle{same}
-\usepackage{threeparttable}
-\doublespacing
 
-\raggedright
-\textwidth = 6.5 in
-\textheight = 8.25 in
-\oddsidemargin = 0.0 in
-\evensidemargin = 0.0 in
-\topmargin = 0.0 in
-\headheight = 0.0 in
-\headsep = 0.5 in
-\parskip = 0.1 in
-\parindent = 0.2in
-
-% Bold the 'Figure #' in the caption and separate it from the title/caption with a period
-% Captions will be left justified
-\usepackage[aboveskip=1pt,labelfont=bf,labelsep=period,justification=raggedright,singlelinecheck=off]{caption}
-
-% Remove brackets from numbering in List of References
-%\makeatletter
-%\renewcommand{\@biblabel}[1]{\quad#1.}
-%\makeatother
-
-% Self defined commands
+% self-defined commands
 \newcommand{\degreesC}{\textdegree C\xspace}
 \newcommand{\degrees}{\textdegree\xspace}
 \newcommand{\dC}{$\delta^{13}$C\xspace}
@@ -67,53 +35,54 @@
 \newcommand{\SrSr}{$^{87}$Sr/$^{86}$Sr\xspace}
 \newcommand{\OsOs}{$^{187}$Os/$^{188}$Os\xspace}
 \newcommand{\permil}{\textperthousand\xspace}
-\newcommand{\UPb}{$^{206}$Pb/$^{238}$U\xspace}
 \newcommand{\pCOtwo}{\textit{p}CO$_{2}$\xspace}
 \newcommand{\COtwo}{CO$_{2}$\xspace}
-%
 
-\pagestyle{myheadings}
-\pagestyle{fancy}
-\fancyhf{}
-\lhead{Park et al., in preparation}
-\rhead{\thepage}
+\templatetype{pnasresearcharticle}
 
-\begin{document}
+\title{Emergence of the Southeast Asian islands as a driver for Neogene cooling}
 
-\begin{flushleft}
-{\Large \textbf{Emergence of the Southeast Asian islands as a driver for Neogene cooling}}
+% Use letters for affiliations, numbers to show equal authorship (if applicable) and to indicate the corresponding author
+\author[a,1]{Yuem Park}
+\author[a]{Pierre Maffre} 
+\author[b]{Yves Godd\'eris}
+\author[c]{Francis A. Macdonald}
+\author[c]{Eliel A. Anttila}
+\author[a]{Nicholas L. Swanson-Hysell}
 
-Yuem Park\textsuperscript{1},
-Pierre Maffre\textsuperscript{1},
-Yves Godd\'eris\textsuperscript{3},
-Francis A. Macdonald\textsuperscript{2},
-Eliel A. Anttila\textsuperscript{2},
-Nicholas L. Swanson-Hysell\textsuperscript{1}
+\affil[a]{Department of Earth and Planetary Science, University of California, Berkeley, CA 94720, USA}
+\affil[b]{G\'eosciences Environnement Toulouse, CNRS--Universit\'e Paul Sabatier - IRD, Toulouse 31400, France}
+\affil[c]{Department of Earth Science, University of California, Santa Barbara, CA 93106, USA}
 
-\bigskip
-\textsuperscript{1} Department of Earth and Planetary Science, University of California, Berkeley, CA, USA
+% Please give the surname of the lead author for the running footer
+\leadauthor{Park} 
 
-\textsuperscript{2} Department of Earth Science, University of California, Santa Barbara, CA, USA
+% Authors must submit a 120-word maximum statement about the significance of their research paper written at a level understandable to an undergraduate educated scientist outside their field of speciality. The primary goal of the significance statement is to explain the relevance of the work in broad context to a broad readership. The significance statement appears in the paper itself and is required for all research papers.
+\significancestatement{Authors must submit a 120-word maximum statement about the significance of their research paper written at a level understandable to an undergraduate educated scientist outside their field of speciality. The primary goal of the significance statement is to explain the relevance of the work in broad context to a broad readership. The significance statement appears in the paper itself and is required for all research papers.}
 
-\textsuperscript{3} G\'eosciences Environnement Toulouse, CNRS--Universit\'e Paul Sabatier - IRD, Toulouse, France
+% Please include corresponding author, author contribution and author declaration information
+\authorcontributions{Please provide details of author contributions here.}
+\authordeclaration{No competing interests to declare.}
+\correspondingauthor{\textsuperscript{1}To whom correspondence should be addressed. E-mail: yuempark@berkeley.edu}
 
-\bigskip
+% At least three keywords are required at submission. Please provide three to five keywords, separated by the pipe symbol.
+\keywords{Keyword 1 $|$ Keyword 2 $|$ Keyword 3 $|$ ...} 
 
-\end{flushleft}
-
-\linenumbers
-
-\noindent
-% MAXIMUM 125 CHARACTERS 
-\textbf{One Sentence Summary:} Growth of tropical islands led to efficient carbon consumption and drove cooling over the past 15 million years.
-
-% MAXIMUM 125 WORDS
-% NO CITATIONS OR ABBREVIATIONS
+% Please provide an abstract of no more than 250 words in a single paragraph. Abstracts should explain to the general reader the major contributions of the article. References in the abstract must be cited in full within the abstract itself and cited in the text.
 \begin{abstract}
 The steep topography, tropical climate, and mafic lithologies of the Southeast Asian islands contribute to efficient chemical weathering and carbon sequestration. Concurrent with global cooling since the mid-Miocene, ongoing collision between the Sunda-Banda arc and Australia has increased the area of subaerially-exposed land in the region. Here we integrate lithology into a coupled weathering-climate model to assess how the global climate system responds to changes in paleogeography. We then use paleoshoreline data as boundary conditions to quantify the change in steady-state \pCOtwo associated with the tectonic emergence of the Southeast Asian islands since the mid-Miocene. We find that the modeled decrease in \pCOtwo due to these paleogeographic changes is sufficient to explain long-term climatic cooling over the Neogene.
 \end{abstract}
 
-The Southeast Asian islands (SEAI) have an out-sized contribution to modern chemical weathering fluxes. The confluence of steep topography, a warm and wet tropical climate, and the presence of mafic lithologies results in high fluxes of Ca and Mg cations and associated \COtwo consumption \cite{Gaillardet1999a}. There has been a significant increase of subaerially-exposed land area within the region since the Miocene associated with ongoing arc-continent collision between Australia and the Sunda-Banda arc system \cite{Molnar2015a, Macdonald2019a}. Concurrently, after the Miocene Climatic Optimum, a cooling trend began ca. 15~Ma and accelerated over the past 4 million years (m.y.) culminating with the onset of Northern Hemisphere glaciation \cite{Zachos2008a}. Many hypotheses have been proposed to explain this cooling trend including changes in ocean/atmosphere circulation \cite{Haug1998a, Shevenell2004a, Molnar2015a}, a decrease in volcanic outgassing \cite{Berner1983a}, or uplift in the Himalaya \cite{Raymo1992a, Galy2007a}. Here we instead propose that SEAI emergence was itself sufficient to explain long-term climatic cooling over the Neogene.
+\dates{This manuscript was compiled on \today}
+\doi{\url{www.pnas.org/cgi/doi/10.1073/pnas.XXXXXXXXXX}}
+
+\begin{document}
+
+\maketitle
+\thispagestyle{firststyle}
+\ifthenelse{\boolean{shortarticle}}{\ifthenelse{\boolean{singlecolumn}}{\abscontentformatted}{\abscontent}}{}
+
+\dropcap{T}he Southeast Asian islands (SEAI) have an out-sized contribution to modern chemical weathering fluxes. The confluence of steep topography, a warm and wet tropical climate, and the presence of mafic lithologies results in high fluxes of Ca and Mg cations and associated \COtwo consumption \cite{Gaillardet1999a}. There has been a significant increase of subaerially-exposed land area within the region since the Miocene associated with ongoing arc-continent collision between Australia and the Sunda-Banda arc system \cite{Molnar2015a, Macdonald2019a}. Concurrently, after the Miocene Climatic Optimum, a cooling trend began ca. 15~Ma and accelerated over the past 4 million years (m.y.) culminating with the onset of Northern Hemisphere glaciation \cite{Zachos2008a}. Many hypotheses have been proposed to explain this cooling trend including changes in ocean/atmosphere circulation \cite{Haug1998a, Shevenell2004a, Molnar2015a}, a decrease in volcanic outgassing \cite{Berner1983a}, or uplift in the Himalaya \cite{Raymo1992a, Galy2007a}. Here we instead propose that SEAI emergence was itself sufficient to explain long-term climatic cooling over the Neogene.
 
 Over geologic time-scales, \COtwo enters Earth's ocean--atmosphere system primarily via volcanism and metamorphic degassing, and leaves primarily through the chemical weathering of silicate rocks, with a smaller sink through organic carbon burial \cite{Kump1997a}. Chemical weathering delivers alkalinity and cations to the ocean which drives carbon sequestration through carbonate precipitation. Steady-state \pCOtwo is set at the \pCOtwo level at which \COtwo sinks are equal to sources. As \COtwo sinks are removed and \pCOtwo rises, temperature increases and the hydrological cycle is invigorated, causing other weathering sinks to increase until a new steady-state is achieved at higher \pCOtwo \cite{Kump1997a}. Conversely, as regions with high carbon sequestration potential emerge on Earth's surface, \pCOtwo decreases resulting in other weathering sinks to diminish leading to a new lower steady-state \pCOtwo concentration.
 
@@ -143,40 +112,77 @@ It has been argued that enhanced weathering in regions of active uplift predicts
 
 Coupled geological constraints and modeling experiments demonstrate that SEAI has been a growing hot spot for carbon sequestration from the Miocene to present. Changes in volcanic outgassing and paleogeography elsewhere on Earth, particularly in the Himalaya and Central America, would have also effected geological carbon sources and sinks. Such changes are likely to have induced complex feedbacks on many Earth surface processes. Yet, not only does the history of SEAI emergence coincide with Neogene cooling and the onset of Northern Hemisphere glaciation, but our coupled weathering-climate model also indicates that the associated steady-state \pCOtwo change is sufficient to explain the magnitude of cooling. These results highlight that the Earth's climate state is particularly sensitive to changes in tropical paleogeography.
 
-%%TC:ignore
-\section*{ACKNOWLEDGEMENTS \label{sec:ACKNOWLEDGEMENTS}}
+\section*{Guide to using this template on Overleaf}
 
-Collaborative research between NLS-H and YG was initially supported by a grant from the France-Berkeley Fund. FAM and NLS-H gratefully acknowledge support through NSF FRES grants \#1926001 and \#1925990. We thank Alec Brenner, Sam Lo Bianco, Mariana Lin, and Judy Pu for their data compilation contributions to the paleoshoreline reconstructions. The GEOCLIM code associated with this study is openly available: \url{https://github.com/piermafrost/GEOCLIM-dynsoil-steady-state}
-%%TC:endignore
-
-\clearpage
-\newpage
-
-\section*{FIGURES}
-
-% 70 words
-\begin{figure}[h!]
+\begin{figure}
     \centering
-    \includegraphics[width=0.9\textwidth]{Figures/shoreline_growth.pdf}
+    \includegraphics[width=0.9\linewidth]{Figures/shoreline_growth.pdf}
     \caption{The emergence of the Southeast Asian islands (also referred to as the Maritime Continent in climate science literature) from the mid-Miocene to present. Past shorelines are shown in A with associated land area summarized in B. A significant increase in area over the past 5 million years is coincident with cooling and the onset of Northern Hemisphere glaciation as reflected in the benthic oxygen isotope record \cite{Zachos2008a} shown in C.}
     \label{fig:shoreline_growth}
 \end{figure}
 
-% 100 words
-\begin{figure}[h!]
+\begin{figure}
     \centering
-    \includegraphics[width=1\textwidth]{Figures/scenario_pCO2.pdf}
+    \includegraphics[width=1\linewidth]{Figures/scenario_pCO2.pdf}
     \caption{Steady-state \pCOtwo estimates from GEOCLIM for the various scenarios discussed in the text. For each of the seven scenarios, each point represents an estimate from one of the 5,381 unique parameter combinations that resulted in reasonable total global \COtwo consumption and most closely matched estimates of present-day \COtwo consumption in 80 watersheds around the world (see SI). The box encloses the middle 50\% of the \pCOtwo estimates (i.e. the interquartile range), and the notch represents the median with its 95\% confidence interval. The whiskers extend to the 2.5 and 97.5 percentile values. Glaciation thresholds \cite{DeConto2008a} are shown on the x-axis.}
     \label{fig:scenario_pCO2}
 \end{figure}
 
-\clearpage
-\newpage
-\footnotesize
+\subsection*{Author Affiliations}
 
-\singlespacing
+x
 
-\bibliographystyle{nature}
+\begin{figure}%[tbhp]
+\centering
+\includegraphics[width=.8\linewidth]{Figures/regolith_schematic.pdf}
+\caption{Placeholder image of a frog with a long example legend to show justification setting.}
+\label{fig:frog}
+\end{figure}
+
+
+\begin{SCfigure*}[\sidecaptionrelwidth][t]
+\centering
+\includegraphics[width=11.4cm,height=11.4cm]{Figures/regolith_schematic.pdf}
+\caption{This legend would be placed at the side of the figure, rather than below it.}\label{fig:side}
+\end{SCfigure*}
+
+\begin{figure*}[bt!]
+\begin{align*}
+(x+y)^3&=(x+y)(x+y)^2\\
+       &=(x+y)(x^2+2xy+y^2) \numberthis \label{eqn:example} \\
+       &=x^3+3x^2y+3xy^3+x^3. 
+\end{align*}
+\end{figure*}
+
+
+\begin{table}%[tbhp]
+\centering
+\caption{Comparison of the fitted potential energy surfaces and ab initio benchmark electronic energy calculations}
+\begin{tabular}{lrrr}
+Species & CBS & CV & G3 \\
+\midrule
+1. Acetaldehyde & 0.0 & 0.0 & 0.0 \\
+2. Vinyl alcohol & 9.1 & 9.6 & 13.5 \\
+3. Hydroxyethylidene & 50.8 & 51.2 & 54.0\\
+\bottomrule
+\end{tabular}
+
+\addtabletext{nomenclature for the TSs refers to the numbered species in the table.}
+\end{table}
+
+\matmethods{Please describe your materials and methods here. This can be more than one paragraph, and may contain subsections and equations as required. Authors should include a statement in the methods section describing how readers will be able to access the data in the paper. 
+
+\subsection*{Subsection for Method}
+Example text for subsection.
+}
+
+\showmatmethods{} % Display the Materials and Methods section
+
+\acknow{Collaborative research between NLS-H and YG was initially supported by a grant from the France-Berkeley Fund. FAM and NLS-H gratefully acknowledge support through NSF FRES grants \#1926001 and \#1925990. We thank Alec Brenner, Sam Lo Bianco, Mariana Lin, and Judy Pu for their data compilation contributions to the paleoshoreline reconstructions. The GEOCLIM code associated with this study is openly available: \url{https://github.com/piermafrost/GEOCLIM-dynsoil-steady-state}}
+
+\showacknow{} % Display the acknowledgments section
+
+% Bibliography
 \bibliography{References}
 
 \end{document}
