Updates from Overleaf

--- a/Manuscript/Supplementary_Information.tex
+++ b/Manuscript/Supplementary_Information.tex
@@ -413,7 +413,7 @@ Exhumation of the modern Sunda-Banda Arc is the result of ongoing arc-continent 
 
 \newpage
 
-\bibliographystyle{nature}
+\bibliographystyle{gsabull}
 \bibliography{References}
 
 \end{document}
