calculate degassing estimates in the literature

--- a/Code/Notebooks/weatherability_curves/weatherability_curves.ipynb
+++ b/Code/Notebooks/weatherability_curves/weatherability_curves.ipynb
@@ -99,6 +99,14 @@
     "           control_nc.variables['volcanic_degassing'][0].data/1e12,\n",
     "           s=500, zorder=99, facecolor='white', edgecolor='k', linewidth=3)\n",
     "\n",
+    "# plot some degassing estimates\n",
+    "VDM2014_degassing_ratio = np.interp(15, [8,24], [1,1.218])\n",
+    "C2006_degassing_ratio = 20.6/27.0\n",
+    "\n",
+    "#ax.plot([250,250],\n",
+    "#        [(control_nc.variables['volcanic_degassing'][0].data/1e12) * C2006_degassing_ratio,\n",
+    "#         (control_nc.variables['volcanic_degassing'][0].data/1e12) * VDM2014_degassing_ratio])\n",
+    "\n",
     "ax.set_xticks([286, 500, 700, 900, 1100])\n",
     "\n",
     "ax.tick_params(axis='both', labelsize=14)\n",
