Updates from Overleaf

--- a/Manuscript/Manuscript.tex
+++ b/Manuscript/Manuscript.tex
@@ -93,9 +93,9 @@ Topography, climate, and lithology all effect chemical weathering. High-relief r
 
 Previous work has estimated that the decrease in \pCOtwo associated with the emergence of the SEAI since 5~Ma is $\sim$19~ppm \cite{Molnar2015a}. This 19~ppm estimate was obtained using a 0-D equation that assumes a direct linear relationship between mean global temperature and changes in weathering-rate-weighted land area, scaled by a factor that is intended to account for the influence of both runoff and temperature. \pCOtwo was then estimated from the calculated temperature using a simple energy balance equation. However, the relationship between mean global temperature (or \pCOtwo) and weathering-rate-weighted land area is not linear. As regions with high carbon sequestration potential, such as the SEAI, emerge on Earth's surface, the way in which silicate weathering rates evolve around the globe to adjust to the higher global weatherability depends on the specific spatial distribution of topography, climate, and lithology at the time of emergence. For example, if the spatial distribution of topography, climate, and lithology were such that Earth's surface overall had a relatively low carbon sequestration potential at the time of SEAI emergence, then a larger \pCOtwo change would be required to balance the sinks and sources of \COtwo than if Earth's surface overall had a relatively high carbon sequestration potential. However, silicate weathering within the emerging SEAI themselves would be adapting to changing \pCOtwo, ultimately resulting in a complex, non-linear, and spatially-varying system of feedbacks between climate and silicate weathering. Therefore, any attempt to meaningfully estimate the decrease in steady-state \pCOtwo associated with emergence of the SEAI must account for the spatial distribution of topography, climate, and lithology.
 
-\section*{Methods}
+\section*{Model and Boundary Conditions}
 
-\subsection*{GEOCLIM model}
+\subsection*{GEOCLIM}
 
 To estimate the decrease in steady-state \pCOtwo associated with the increase of subaerially-exposed land area in the SEAI, we use the globally spatially-resolved GEOCLIM model \cite{Godderis2017c}. GEOCLIM estimates changes in steady-state \pCOtwo associated with coupled changes in erosion, chemical weathering, and climatology by linking a silicate weathering model to climate model runs at multiple \pCOtwo levels.
 
@@ -129,7 +129,7 @@ We use GEOCLIM to estimate \pCOtwo associated with the reconstructed subaerial e
 
 \section*{Results and Discussion}
 
-\subsection*{Neogene cooling}
+\subsection*{SEAI Emergence}
 
 \begin{figure*}[h]
     \centering
@@ -144,9 +144,22 @@ The results of our SEAI scenarios highlight the importance of the combination of
 
 Other hypotheses to explain ice sheet growth over the Neogene invoke changes in ocean/atmosphere circulation including: further climatic isolation of Antarctica due to strengthening of the circumpolar current \cite{Shevenell2004a}; increased atmospheric moisture in the Northern Hemisphere due to intensified thermohaline circulation following Panama Isthmus emergence \cite{Haug1998a}; and cooling of North America resulting from a strengthened Walker Circulation associated with SEAI emergence \cite{Molnar2015a}. Such changes in ocean/atmosphere circulation are likely to modulate \pCOtwo thresholds for glacial initiation and ice sheet growth \cite{DeConto2008a}. However, the prolonged timescale of the cooling trend since 15~Ma (Fig. \ref{fig:shoreline_growth}C) is most readily attributable to decreasing \pCOtwo associated with evolving geological sources and sinks of carbon, modulated by the silicate weathering feedback \cite{Kump1997a}.
 
-\subsection*{Marine isotopes}
+\subsection*{Volcanic Degassing}
 
-Himalayan uplift \cite{Raymo1992a, Galy2007a} or a decrease in volcanic outgassing \cite{Berner1983a} have also been proposed as drivers for Neogene cooling. Rising marine \SrSr has been associated with increasing weathering of the high \SrSr Himalayan lithologies \cite{Raymo1992a}. This increase in \SrSr since ca. 35~Ma is followed by a decrease in slope ca. 15~Ma that has been attributed to exhumation of relatively low \SrSr and high \OsOs Lesser Himalayan lithologies \cite{Colleps2018a}, but could also be at least partially driven by the exhumation of mafic and organic-rich forearc sediments in the SEAI during arc-continent collision. Enhanced organic matter burial in the Bay of Bengal due to high sedimentation rates could also have contributed to Neogene cooling \cite{Galy2007a}.
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=1\linewidth]{Manuscript/Figures/weatherability_curves.pdf}
+    \caption{Weatherability curves for the ``paleo-SEAI'' scenarios shown in Figure \ref{fig:scenario_pCO2}. Details on how these curves were generated are described in \MM. Each of the 4 curves represent a different tectonic boundary condition (i.e. the reconstructed paleoshorelines of the SEAI; Fig. \ref{fig:shoreline_growth}A), and shows the volcanic degassing flux necessary to balance the silicate weathering flux at a given \pCOtwo (and vice versa). Point B represents the present day, in which \pCOtwo is 286~ppm. The arrow from Point A$_{1}$ to B represents the ``weatherability only'' scenario, in which global weatherability changes as the SEAI emerge, but the volcanic degassing flux does not change over the past 15~m.y. In this scenario, the \pCOtwo decreases from the value dictated by the 15~Ma ``paleo-SEAI'' weatherability curve ($\sim$570~ppm). The arrow from Point A$_{2}$ to B instead represents the ``degassing only'' scenario, in which global weatherability remains the same as the present day, but the same change in \pCOtwo as the ``weatherability only'' scenario is achieved by decreasing the volcanic degassing flux. In this scenario, the volcanic degassing flux decreases from the value dictated by the present day weatherability curve ($\sim$13\% greater than the present day). The arrow from Point A$_{3}$ to B represents the ``weatherability and degassing'' scenario, in which global weatherability changes as the SEAI emerge and the volcanic degassing flux decreases from a value 10\% greater than the present day.}
+    \label{fig:weatherability_curves}
+\end{figure}
+
+A decrease in volcanic degassing \cite{Berner1983a} has also been proposed as a driver for Neogene cooling. Proxy-based estimates of the evolution of volcanic degassing fluxes throughout the Neogene are inconsistent with each other, such that not even the sign of the change in volcanic degassing over the past $\sim$15~m.y. is without ambiguity \cite{Godderis2017c}. For example, it has been estimated that the volcanic degassing flux was $\sim$25\% lower \cite{Cogne2006a} and $\sim$10\% higher \cite{Van-Der-Meer2014a} at 15~Ma relative to the present day.
+
+Nevertheless, our model framework provides us with the opportunity to estimate the magnitude of volcanic degassing flux decrease necessary to achieve the same change in \pCOtwo predicted for the increase in global weatherability associated with the emergence of the SEAI over the past 15~m.y. 
+
+\subsection*{Marine Isotopes}
+
+Himalayan uplift \cite{Raymo1992a, Galy2007a} has also been proposed as drivers for Neogene cooling. Rising marine \SrSr has been associated with increasing weathering of the high \SrSr Himalayan lithologies \cite{Raymo1992a}. This increase in \SrSr since ca. 35~Ma is followed by a decrease in slope ca. 15~Ma that has been attributed to exhumation of relatively low \SrSr and high \OsOs Lesser Himalayan lithologies \cite{Colleps2018a}, but could also be at least partially driven by the exhumation of mafic and organic-rich forearc sediments in the SEAI during arc-continent collision. Enhanced organic matter burial in the Bay of Bengal due to high sedimentation rates could also have contributed to Neogene cooling \cite{Galy2007a}.
 
 It has been argued that enhanced weathering in regions of active uplift predicts an increase in global alkalinity fluxes. However, global alkalinity delivery from silicate weathering needs to be nearly constant to keep the long-term carbon cycle in steady-state \cite{Kump1997a}. Enhanced weathering in a region such as the SEAI is compensated by a decrease in weathering elsewhere. Global alkalinity delivery from silicate weathering does not change, but occurs more efficiently and thereby at lower \pCOtwo. Given that carbonate weathering is disconnected from the long-term carbon-cycle mass balance, changes in carbonate accumulation through time \cite{Si2019a} could be driven by changes in carbonate weathering.
 
@@ -157,7 +170,7 @@ Coupled geological constraints and modeling experiments demonstrate that the SEA
 \matmethods{
 The code for the GEOCLIM model used in this study can be found at: \url{https://github.com/piermafrost/GEOCLIM-dynsoil-steady-state}. The code that generated the inputs and analyzed the output of the GEOCLIM model can be found at: \url{https://github.com/Swanson-Hysell-Group/GEOCLIM_Modern}.
 
-\subsection*{GEOCLIM silicate weathering component}
+\subsection*{GEOCLIM Silicate Weathering Component}
 
 The silicate weathering component of the GEOCLIM model has been modified from the previously published version \cite{Godderis2017b}. The new component implements the model of Gabet and Mudd (2009) \cite{Gabet2009a} for the development of a chemically weathered profile. We refer to this chemically weathered profile as regolith where the base of the regolith is unweathered bedrock. In the model of Gabet and Mudd (2009), material enters the regolith and leaves either as a solute through chemical weathering of the material during its travel from the bedrock towards the surface, or as a physically weathered particle once it reaches the top. We use the DynSoil implementation of the Gabet and Mudd (2009) model, which integrates chemical weathering within the regolith \cite{West2012a}. The transient time-varying version of this regolith model is described by three equations:
 
@@ -245,6 +258,10 @@ In this study, we are interested in obtaining the steady-state solution rather t
 
 \noindent
 $x(z)$ is the abundance profile of primary phases inside the regolith, varying with height upward from the base of the regolith as shown in Figure \ref{fig:regolith_schematic}. Setting $z$ equal to the regolith thickness ($h$) gives $x_s$ which is the proportion of primary phases remaining at the top of the regolith column.
+
+\subsection*{Weatherability Curves}
+
+To create the 15~Ma ``paleo-SEAI'' curve shown in Figure \ref{fig:weatherability_curves}, we use the reconstructed paleoshorelines of the SEAI at 15~Ma (Fig. \ref{fig:shoreline_growth}A). We then select the parameter combination that had the highest $r^{2}$ between computed and measured \COtwo consumption in watersheds around the world during calibration (\textit{Calibration} and \SI), and fix \pCOtwo at the 3 \pCOtwo levels at which the GFDL CM2.0 climate model experiments were computed (\SI). We then run GEOCLIM at each of these \pCOtwo levels until steady state is achieved (i.e. until the volcanic degassing flux is equal to the silicate weathering flux). We then repeat this process for the 10 and 5~Ma ``paleo-SEAI'' scenarios and the present day to generate the 3 other weatherability curves presented in Figure \ref{fig:weatherability_curves}. 
 
 \subsection*{SI Appendix}
 
