Updates from Overleaf

--- a/Manuscript/Manuscript.tex
+++ b/Manuscript/Manuscript.tex
@@ -149,13 +149,15 @@ Other hypotheses to explain ice sheet growth over the Neogene invoke changes in 
 \begin{figure}[h]
     \centering
     \includegraphics[width=1\linewidth]{Manuscript/Figures/weatherability_curves.pdf}
-    \caption{Weatherability curves for the ``paleo-SEAI'' scenarios shown in Figure \ref{fig:scenario_pCO2}. Details on how these curves were generated are described in \MM. Each of the 4 curves represent a different tectonic boundary condition (i.e. the reconstructed paleoshorelines of the SEAI; Fig. \ref{fig:shoreline_growth}A), and shows the volcanic degassing flux necessary to balance the silicate weathering flux at a given \pCOtwo (and vice versa). Point B represents the present day, in which \pCOtwo is 286~ppm. The arrow from Point A$_{1}$ to B represents the ``weatherability only'' scenario, in which global weatherability changes as the SEAI emerge, but the volcanic degassing flux does not change over the past 15~m.y. In this scenario, the \pCOtwo decreases from the value dictated by the 15~Ma ``paleo-SEAI'' weatherability curve ($\sim$570~ppm). The arrow from Point A$_{2}$ to B instead represents the ``degassing only'' scenario, in which global weatherability remains the same as the present day, but the same change in \pCOtwo as the ``weatherability only'' scenario is achieved by decreasing the volcanic degassing flux. In this scenario, the volcanic degassing flux decreases from the value dictated by the present day weatherability curve ($\sim$13\% greater than the present day). The arrow from Point A$_{3}$ to B represents the ``weatherability and degassing'' scenario, in which global weatherability changes as the SEAI emerge and the volcanic degassing flux decreases from a value 10\% greater than the present day.}
+    \caption{Weatherability curves for the ``paleo-SEAI'' scenarios shown in Figure \ref{fig:scenario_pCO2}. Details on how these curves were generated are described in \MM. Each of the 4 curves represent a different tectonic boundary condition (i.e. the reconstructed paleoshorelines of the SEAI; Fig. \ref{fig:shoreline_growth}A), and shows the volcanic degassing flux necessary to balance the silicate weathering flux at a given \pCOtwo (and vice versa). Point B represents the pre-Industrial, in which \pCOtwo is 286~ppm. The arrow from Point A$_{1}$ to B represents the ``weatherability only'' scenario, in which global weatherability changes as the SEAI emerge, but the volcanic degassing flux does not change over the past 15~m.y. In this scenario, the \pCOtwo decreases from the value dictated by the 15~Ma ``paleo-SEAI'' weatherability curve ($\sim$570~ppm). The arrow from Point A$_{2}$ to B instead represents the ``degassing only'' scenario, in which global weatherability remains the same as the pre-Industrial, but the same change in \pCOtwo as the ``weatherability only'' scenario is achieved by decreasing the volcanic degassing flux. In this scenario, the volcanic degassing flux decreases from the value dictated by the pre-Industrial weatherability curve ($\sim$13\% greater than the pre-Industrial). The arrow from Point A$_{3}$ to B represents the ``weatherability and degassing'' scenario, in which global weatherability changes as the SEAI emerge and the volcanic degassing flux decreases from a value $\sim$4\% greater than the pre-Industrial. This change in the volcanic degassing flux corresponds to the \pCOtwo threshold estimated for Antarctic glaciation \cite{DeConto2008a} on a planet with our 15~Ma ``paleo-SEAI'' paleoshorelines.}
     \label{fig:weatherability_curves}
 \end{figure}
 
 A decrease in volcanic degassing \cite{Berner1983a} has also been proposed as a driver for Neogene cooling. Proxy-based estimates of the evolution of volcanic degassing fluxes throughout the Neogene are inconsistent with each other, such that not even the sign of the change in volcanic degassing over the past $\sim$15~m.y. is without ambiguity \cite{Godderis2017c}. For example, it has been estimated that the volcanic degassing flux was $\sim$25\% lower \cite{Cogne2006a} and $\sim$10\% higher \cite{Van-Der-Meer2014a} at 15~Ma relative to the present day.
 
-Nevertheless, our model framework provides us with the opportunity to estimate the magnitude of volcanic degassing flux decrease necessary to achieve the same change in \pCOtwo predicted for the increase in global weatherability associated with the emergence of the SEAI over the past 15~m.y. 
+Nevertheless, our model framework provides us with the opportunity to estimate the magnitude of volcanic degassing flux decrease necessary to achieve the same change in \pCOtwo predicted for the increase in global weatherability associated with the emergence of the SEAI over the past 15~m.y. If we use the parameter combination that had the highest $r^{2}$ between computed and measured \COtwo consumption in watersheds around the world during calibration (\textit{Calibration} and \SI), GEOCLIM estimates a volcanic degassing flux for the pre-Industrial of 4.1$\times$10$^{12}$~mol/yr. If we then assume that this volcanic degassing flux did not change over the past 15~m.y., then GEOCLIM estimates that the increase in global weatherability associated with the emergence of the SEAI lead to a change in \pCOtwo of $\sim$280~ppm (``weatherability only'' scenario in Fig. \ref{fig:weatherability_curves}). If we instead assume that global weatherability did not change over the past 15~m.y., then we estimate that the volcanic degassing flux needs to have been $\sim$13\% greater at 15~Ma relative to the pre-Industrial to drive the same $\sim$280~ppm change in \pCOtwo (``degassing only'' scenario in Fig. \ref{fig:weatherability_curves}).
+
+This $\sim$13\% value is higher than 10\%, the highest current estimate for the volcanic degassing flux at 15~Ma relative to the present day \cite{Van-Der-Meer2014a}, suggesting that reasonable changes in the volcanic degassing flux alone are insufficient to drive the majority of cooling observed over the Neogene. However, changes in the volcanic degassing flux would have modulated changes in global weatherability associated with the emergence of the SEAI. In a hypothetical scenario in which \pCOtwo was at the threshold for Antarctic glaciation \cite{DeConto2008a} at 15~Ma and the SEAI are emerging, the volcanic degassing flux would only have had to have been $\sim$4\% higher relative to the pre-Industrial (``weatherability and degassing'' scenario in Fig. \ref{fig:weatherability_curves}).
 
 \subsection*{Marine Isotopes}
 
@@ -261,7 +263,7 @@ $x(z)$ is the abundance profile of primary phases inside the regolith, varying w
 
 \subsection*{Weatherability Curves}
 
-To create the 15~Ma ``paleo-SEAI'' curve shown in Figure \ref{fig:weatherability_curves}, we use the reconstructed paleoshorelines of the SEAI at 15~Ma (Fig. \ref{fig:shoreline_growth}A). We then select the parameter combination that had the highest $r^{2}$ between computed and measured \COtwo consumption in watersheds around the world during calibration (\textit{Calibration} and \SI), and fix \pCOtwo at the 3 \pCOtwo levels at which the GFDL CM2.0 climate model experiments were computed (\SI). We then run GEOCLIM at each of these \pCOtwo levels until steady state is achieved (i.e. until the volcanic degassing flux is equal to the silicate weathering flux). We then repeat this process for the 10 and 5~Ma ``paleo-SEAI'' scenarios and the present day to generate the 3 other weatherability curves presented in Figure \ref{fig:weatherability_curves}. 
+To create the 15~Ma ``paleo-SEAI'' curve shown in Figure \ref{fig:weatherability_curves}, we use the reconstructed paleoshorelines of the SEAI at 15~Ma (Fig. \ref{fig:shoreline_growth}A). We then select the parameter combination that had the highest $r^{2}$ between computed and measured \COtwo consumption in watersheds around the world during calibration (\textit{Calibration} and \SI), and fix \pCOtwo at the 3 \pCOtwo levels at which the GFDL CM2.0 climate model experiments were computed (\SI). We then run GEOCLIM at each of these \pCOtwo levels until steady state is achieved (i.e. until the volcanic degassing flux is equal to the silicate weathering flux). We then repeat this process for the 10 and 5~Ma ``paleo-SEAI'' paleoshorelines and the present day paleoshorelines to generate the 3 other weatherability curves. 
 
 \subsection*{SI Appendix}
 
